# clipboard-image-editor

./: README.md
src/: index.html  main.js  styles.css
src-tauri/: .rustfmt.toml  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
